Muitas mudanças, pagina de compra etc...

--- a/views/Login-bookgear.html
+++ b/views/Login-bookgear.html
@@ -13,12 +13,12 @@
 
     <style>
         body {
-        background-color: rgb(66, 66, 66);
-        background-image: url(../images/background2.jpg);
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: cover;
-    }
+            background-color: rgb(66, 66, 66);
+            background-image: url(../images/background2.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
 
         .texto {
             color: white;
@@ -51,10 +51,12 @@
             width: 260px;
             margin-top: 20px;
             text-align: left;
-    
+
         }
 
-        .forgot-password a:link , .forgot-password a:visited, .forgot-password {
+        .forgot-password a:link,
+        .forgot-password a:visited,
+        .forgot-password {
             margin-top: 20px;
             color: #ff7300;
             font: bold 17px sans-serif;
@@ -66,7 +68,7 @@
         }
 
         .mini-box a,
-        .mini-box input{
+        .mini-box input {
             border-radius: 10px;
         }
 
@@ -101,17 +103,17 @@
 </head>
 
 <body>
-        <header class="main">
-
-
+    <header class="main">
         <div class="containermenu">
             <div class="logo">
                 <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
-                <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                     </svg></a>
             </div>
 
@@ -128,9 +130,9 @@
                 <ul>
                     <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">AUTORES</a></li>
+                    <li><a href="/user">AUTORES</a></li>
                     <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
                     <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
@@ -151,8 +153,8 @@
                     <a href="/cadastro">Cadastrar</a>
                 </div>
             </form>
-                <p class="forgot-password"><a href="#">Esqueceu a senha?</a></p>     
-                
+            <p class="forgot-password"><a href="#">Esqueceu a senha?</a></p>
+
         </div>
     </div>
 
