--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -117,12 +117,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">HOME/</a></li>
+                    <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="/user">AUTORES</a></li>
                     <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
-                    <li><a href="#">AUTORES</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
