--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -337,11 +337,9 @@
 
 <body>
     <header class="main">
-
-
         <div class="containermenu">
             <div class="logo">
-                <a href="#"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -356,19 +354,19 @@
             <div class="user">
                 <a href="/Login">
                     <button type="url" class="botao">Entrar</button></a>
-                <a class="login" href="/cadastro">
+                <a class="login" href="/Cadastro">
                     <button type="url" class="botao">Cadastrar</button></a>
             </div>
         </div>
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">LIVROS</a></li>
+                    <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="/user">AUTORES</a></li>
                     <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
-                    <li><a href="#">AUTORES</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
