--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -307,11 +307,9 @@
 
 <body>
     <header class="main">
-
-
         <div class="containermenu">
             <div class="logo">
-                <a href="#"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -326,19 +324,19 @@
             <div class="user">
                 <a href="/Login">
                     <button type="url" class="botao">Entrar</button></a>
-                <a class="login" href="/cadastro">
+                <a class="login" href="/Cadastro">
                     <button type="url" class="botao">Cadastrar</button></a>
             </div>
         </div>
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">LIVROS</a></li>
+                    <li><a href="/">HOME</a></li>
                     <li><a href="#">CAIXAS</a></li>
-                    <li><a href="/carrinho">CARRINHO</a></li>
+                    <li><a href="/user">AUTORES</a></li>
                     <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
-                    <li><a href="#">AUTORES</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
+                    <li><a href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
@@ -358,9 +356,6 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-
                     <button class="remove" type="url">Remover da wishlist</button>
                     <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
@@ -379,10 +374,8 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-
-                    <button class="remove" type="url">Remover da wishlist</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
@@ -399,10 +392,8 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-
-                    <button class="remove" type="url">Remover da wishlist</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
@@ -419,9 +410,8 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-                    <button class="remove" type="url">Remover da wishlist</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
@@ -435,10 +425,8 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-
-                    <button class="remove" type="url">Remover da wishlist</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
@@ -452,10 +440,8 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-
-                    <button class="remove" type="url">Remover da wishlist</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
 
@@ -472,10 +458,8 @@
                     <!-- preço do produto -->
                     <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
                     <div class="estoque">Em estoque</div>
-
-
-
-                    <button class="remove" type="url">Remover da wishlist</button></a>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
         </div>
