--- a/public/stylesheets/autores.css
+++ b/public/stylesheets/autores.css
@@ -1,28 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
-    margin: 0;
-}
 
 body {
     background-color: rgb(20, 20, 20);
@@ -30,7 +5,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-
 }
 
 img {
@@ -40,7 +14,6 @@ img {
 
 a {
     color: inherit;
-    font-weight: bold;
 }
 
 input,
@@ -58,47 +31,49 @@ button {
 /* The code */
 
 body {
-    font-family: "DM Sans", sans-serif;
+    background-color: rgb(37, 37, 37);
+    background-image: url(../images/background2.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .responsive-container {
-    max-width: 1080px;
+    border-radius: 5px ;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: rgba(42, 41, 43, 0.8);
+    padding: 30px;
+    max-width: 1280px;
+    height: fit-content;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.autor-img {
+    border-radius: 110px;
+    width: 150px;
+    height: 150px;
+    padding: 25px;
 
 }
 
-.header {
-    border-bottom: 1px solid #d0d0d0;
-    min-height: 60px;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    display: flex;
-    justify-content: center;
-}
-
-.header-content {
-    display: flex;
+.img-autores {
+    border-radius: 100%;
+    height: 100%;
     width: 100%;
-    max-width: 2000px;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    align-items: center;
+
+}
+
+.main-grid {
+    width: 775px;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-.header-navigation {
-    display: flex;
-    align-items: center;
-
-}
-
-.header-navigation a {
-    margin-left: 1.5rem;
-    text-decoration: none;
-    font-size: 1rem;
-}
 
 .link-button {
     display: flex;
@@ -121,18 +96,35 @@ body {
 }
 
 main {
+    margin-top: 100px;
     padding-top: 2rem;
     padding-bottom: 6rem;
 }
 
-.grid {
+.grid-row {
     display: grid;
     height: fit-content;
-    grid-template-columns: repeat(4, 180px);
+    width: 776px;
+    grid-template-columns: repeat(4, 170px);
     grid-auto-rows: 200px;
     gap: 2rem;
-    padding: 30px;
-    background-color: rgba(42, 41, 43, 0.9);
+}
+
+.autores {
+    display: grid;
+    gap: 2rem;
+    grid-auto-rows: 200px;
+    width: 400px;
+    height: 664px;
+}
+.autor{
+    display: flex;
+    height: 200px;
+    width: 400px;
+}
+.autor-desc{
+    height: 200px;
+    width: 200px;
 }
 
 .product {
@@ -189,11 +181,12 @@ main {
     width: 120px;
     word-wrap: break-word;
 }
-.bottom{
+
+.bottom {
     display: flex;
     background-color: #FFF;
     padding: 10px;
-    justify-content:right;
+    justify-content: right;
 }
 
 .product-action {
