--- a/public/stylesheets/cabecalho.css
+++ b/public/stylesheets/cabecalho.css
@@ -16,7 +16,7 @@ header {
 
 
 .containermenu {
-  max-width: 1200px;
+  width: 1200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -93,7 +93,7 @@ nav ul {
 }
 
 nav ul li {
-  margin: 0 57px;
+  margin: 0 5.3%;
 }
 
 nav ul li a {
